--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,9 +4,48 @@ body {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-input {
-    width: 5em;
+input [type="range"] {
+    width: 10em;
+    
 }
+
+input[type="range"] {
+    -webkit-appearance: none;
+    background-color: transparent;
+}
+   
+input[type="range"]:focus {
+    outline: none;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+    background-color: orangered;
+    border-radius: 10px;
+    height: 10px;
+}
+
+input[type="range"]::-moz-range-track {
+    background-color: orangered;
+    height: 10px;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 15px;
+    width: 15px;
+    background: white;
+    margin-top: -2.5px;
+    border-radius: 50%;
+}
+   
+input[type="range"]::-moz-range-thumb {
+    height: 15px;
+    width: 15px;
+    background: pink;
+    margin-top: -2.5px;
+    border-radius: 50%;
+}
+ 
 
 #settings {
     padding: 0.5em;
@@ -21,7 +60,7 @@ input {
 #graph {
     height: 10rem;
     border: 0.2em orangered solid;
-    /* margin: 0.5em; */
+    overflow: hidden;
     padding: 0.5em;
     padding-bottom: 0.25em;
     background-image: linear-gradient(rgb(256, 256, 256, 0.5) .01rem, transparent .1rem), 
@@ -32,7 +71,7 @@ input {
 
 .vLine {
     height: 98%;
-    border-left-width: 5px;
+    border-left-width: 10px;
     border-color: orangered;
     border-style: solid;
     margin: 1px;
