--- a/stylesheet.css
+++ b/stylesheet.css
@@ -84,7 +84,6 @@ input[type="range"]:disabled::-moz-range-thumb {
     align-items: center;
     width: fit-content;
     margin: 1em;
-    margin-right: 23.25%;
 }
 
 #play-pause, #slower, #stop, #faster {
@@ -99,6 +98,9 @@ input[type="range"]:disabled::-moz-range-thumb {
 
 #settings {
     margin-right: 30px;
+    position: relative;
+    top: 3.5em;
+    right: 15em;
 }
 
 .center-container {
@@ -131,9 +133,14 @@ input[type="range"]:disabled::-moz-range-thumb {
 #box {
     width: fit-content;
     height: inherit;
+    
     border: 0;
     border-left: white 0.3em solid;
     border-right: white 0.3em solid;
+    
+    padding-left: 2px;
+    padding-right: 2px;
+
     background-color: rgb(0, 0, 0, 0.5);
 }
 
