--- a/stylesheet.css
+++ b/stylesheet.css
@@ -107,10 +107,11 @@ input[type="range"]:disabled::-moz-range-thumb {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: auto;
 }
 
 #graph {
-    height: 10rem;
+    height: 17.5rem;
     border: 0.2em orangered solid;
     overflow: hidden;
     padding: 0.5em;
@@ -128,6 +129,9 @@ input[type="range"]:disabled::-moz-range-thumb {
 
     margin-left: 10%;
     margin-right: 10%;
+
+    /* position: relative; */
+    /* top: 3.5em; */
 }
 
 #box {
